<resources>
    <string name="app_name">Gmail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_icon">create icon</string>
    <string name="search">Pesquisar no e-mail</string>
    <string name="person_name">Gustavo da Hora</string>
    <string name="principal">General</string>
    <string name="general">Principal</string>
    <string name="write">Escrever</string>
    <string name="bookmarks">Todos os Marcadores</string>
    <string name="promotion">Promoções</string>
    <string name="social">Social</string>
    <string name="all">Todas as Cx. entrada</string>
    <string name="menu">Menu</string>
    <string name="email">Email</string>
    <string name="camera_video">camera video</string>
</resources>